@startuml
!pragma layout smetana
class FileIO
class Gnoxi
class GUI
class Main
class Menu
class Shop
class ButtonHandler

Main : new Menu()

Gnoxi : Gnoxi(String name)
Gnoxi : doActivity()
Gnoxi : doSleep()
Gnoxi : doPoop()
Gnoxi : getAge()
Gnoxi : randomEvent()

GUI : newGnoxi()
GUI : oldGnoxi()
GUI : ImageIcons
GUI : JButtons
GUI : JLabels
GUI : JPanels
GUI : JFrames

Menu : Menu()
Menu : musicPlayer(title)
Menu : startGame
Menu : exitGame
Menu : ButtonHandler
Menu : menuFrame

ButtonHandler : actionPerformed()

FileIO : checkForGnoxi()
FileIO : writeGnoxiToCSV()
FileIO : writeWithoutOverwrite()

Shop : Shopitems 1-6
Shop : buy()

Main --> Menu
Menu --> FileIO
Menu --> ButtonHandler
FileIO --> GUI
GUI --> Gnoxi
GUI --> Shop




@enduml